# Can2Csv

./: .gitignore  Can2Csv.bat  README.md  aktualisiereApp.bat  config_dashboard.json  createAndInstallVirtualenv.sh  createDokuPdf.sh  install.bat  pyproject.toml  requirements.lock.txt  runCan2Csv.bat
resources/: CAN1_DA_lw.dbc  CAN1_DA_sw.dbc
src/: alois_calculations.py  calculations.py  can2csv.py  can2csv_app.py  cantransform.py  decode_mf4.py  machine_data.py
src/can2csv/: __main__.py  alois_calculations.py  calculations.py  can2csv_app.py  cantransform.py  machine_data.py
tests/: test_alois_calculations.py  test_calculations.py  test_cantransform.py  test_decode_mf4.py  test_printing.py  testoutput.csv
tests/data/: beispiel1_decoded.mf4  typ1.dbc  typ1_bsp1.mf4  typ1_bsp1_decoded.mf4  typ1_bsp2.MF4  typ1_bsp2_decoded.mf4  typ2.dbc  typ2_bsp1.mf4  typ2_bsp1_decoded.mf4  typ2_bsp2_decoded.mf4  typ2_bsp4_decoded.mf4
