[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "can2csv"
version = "0.1.0"
requires-python = ">=3.10"
description = "Konvertiert CAN-Daten von Bauer-Ladstaetter Projekt in CSV"

dependencies = [
    "asammdf",
    "cantools",
    "matplotlib",
    "numpy",
    "pandas",
    "pytest",
    "python-can"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
